# arbitrage

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  pytest.ini  run_migrations.py  supervisord.conf  table-fast1.md  test_binance_perpetual.py  test_binance_spot.py
.cursor/rules/: Basics.mdc
.github/workflows/: ci.yml  release.yml
_temp/: test_throttling.py
_temp/connectors/: __init__.py  binance.py  bitfinex.py  bitget.py  bybit.py  commex.py  defs.py  facade.py  gate.py  htx.py  kucoin.py  meta.py  mexc.py  okx.py  publisher.py  scheduling.py  utils.py
_temp/core/: cfg.py  connectors.py  defs.py  engine.py  events.py  exceptions.py  lru.py  models.py  p2p.py  pubsub.py  repository.py  throttler.py  utils.py
_temp/test_connectors/: helpers.py  test_binance_connector.py  test_bitfinex_connector.py  test_bitget_connector.py  test_bybit_connector.py  test_commex_connector.py  test_connectors_common.py  test_facade.py  test_gate_connector.py  test_htx_connector.py  test_kucoin_connector.py  test_mexc_connector.py  test_okx_connector.py  test_schedulers.py
alembic/: env.py
alembic/versions/: 08d76073eace_init.py  3edac122b283_add_currency_pair_snapshot_book_depth_.py  a1b2c3d4e5f6_add_token_is_active.py  (+7 more)
app/: crawler.py
scripts/: crawler.py  crawler2.py  ws_benchmark.py
tests/: conftest.py  helpers_connectors.py  test_coinmarketcap.py  test_connectors_perpetual.py  test_connectors_spot.py  test_crawler_perpetual.py  test_orchestrators.py  test_throttling.py
(+122 files in other folders)
