[tool.poetry]
name = "arbitrage"
version = "0.1.0"
description = ""
authors = ["Pavel Minenkov <p.minenkof@arteus.cy>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0"
pydantic-settings = "^2.0"
# Exchange SDKs (from old project, newer versions)
binance-connector = "^3.0"
python-okx = "^0.3"
pybit = "^5.10"
kucoin-python = "^1.0.20"
# HTTP/WebSocket only
aiohttp = "^3.9"
websocket-client = "^1.6"
requests = "^2.31"
# API + DB
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
alembic = "^1.14"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
asyncpg = "^0.29"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
